--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -25,6 +25,7 @@ linter:
     avoid_print: true # print文があると警告が出る
     prefer_single_quotes: true # シングルクオートでないと警告が出る
     always_use_package_imports: true # 相対パスでインポートすると警告が出る。（例）import: 'foo.dart'
+    avoid_annotating_with_dynamic: true # dynamicで型をつけると警告が出る。
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
